9.3/python/_sources/GXST.rst.txt

.. _GXST:

 
GXST class
==================================

.. autoclass:: geosoft.gxapi.GXST
   :members:


.. _ST_INFO:

ST_INFO constants
-----------------------------------------------------------------------

Information to retrieve

.. autodata:: geosoft.gxapi.ST_ITEMS
    :annotation:
.. autodata:: geosoft.gxapi.ST_NPOS
    :annotation:
.. autodata:: geosoft.gxapi.ST_NZERO
    :annotation:
.. autodata:: geosoft.gxapi.ST_DUMMIES
    :annotation:
.. autodata:: geosoft.gxapi.ST_MIN
    :annotation:
.. autodata:: geosoft.gxapi.ST_MAX
    :annotation:
.. autodata:: geosoft.gxapi.ST_RANGE
    :annotation:
.. autodata:: geosoft.gxapi.ST_MEAN
    :annotation:
.. autodata:: geosoft.gxapi.ST_MEDIAN
    :annotation:
.. autodata:: geosoft.gxapi.ST_MODE
    :annotation:
.. autodata:: geosoft.gxapi.ST_GEOMEAN
    :annotation:
.. autodata:: geosoft.gxapi.ST_VARIANCE
    :annotation:
.. autodata:: geosoft.gxapi.ST_STDDEV
    :annotation:
.. autodata:: geosoft.gxapi.ST_STDERR
    :annotation:
.. autodata:: geosoft.gxapi.ST_SKEW
    :annotation:
.. autodata:: geosoft.gxapi.ST_KURTOSIS
    :annotation:
.. autodata:: geosoft.gxapi.ST_BASE
    :annotation:
.. autodata:: geosoft.gxapi.ST_SUM
    :annotation:
.. autodata:: geosoft.gxapi.ST_SUM2
    :annotation:
.. autodata:: geosoft.gxapi.ST_SUM3
    :annotation:
.. autodata:: geosoft.gxapi.ST_SUM4
    :annotation:
.. autodata:: geosoft.gxapi.ST_MINPOS
    :annotation:
.. autodata:: geosoft.gxapi.ST_HIST_MAXCOUNT
    :annotation:

	