2023.1/python/_sources/GXST.rst.txt

.. _GXST:

 
GXST class
==================================

.. autoclass:: geosoft.gxapi.GXST
   :members:


.. _ST_INFO:

ST_INFO constants
-----------------------------------------------------------------------

Information to retrieve

.. autodata:: geosoft.gxapi.ST_ITEMS
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_ITEMS
.. autodata:: geosoft.gxapi.ST_NPOS
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_NPOS
.. autodata:: geosoft.gxapi.ST_NZERO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_NZERO
.. autodata:: geosoft.gxapi.ST_TOTAL
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_TOTAL
.. autodata:: geosoft.gxapi.ST_DUMMIES
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_DUMMIES
.. autodata:: geosoft.gxapi.ST_MIN
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MIN
.. autodata:: geosoft.gxapi.ST_MAX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MAX
.. autodata:: geosoft.gxapi.ST_RANGE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_RANGE
.. autodata:: geosoft.gxapi.ST_MEAN
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MEAN
.. autodata:: geosoft.gxapi.ST_MEDIAN
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MEDIAN
.. autodata:: geosoft.gxapi.ST_MODE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MODE
.. autodata:: geosoft.gxapi.ST_SIMPLE_MODE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SIMPLE_MODE
.. autodata:: geosoft.gxapi.ST_GEOMEAN
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_GEOMEAN
.. autodata:: geosoft.gxapi.ST_VARIANCE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_VARIANCE
.. autodata:: geosoft.gxapi.ST_STDDEV
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_STDDEV
.. autodata:: geosoft.gxapi.ST_STDERR
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_STDERR
.. autodata:: geosoft.gxapi.ST_SKEW
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SKEW
.. autodata:: geosoft.gxapi.ST_KURTOSIS
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_KURTOSIS
.. autodata:: geosoft.gxapi.ST_BASE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_BASE
.. autodata:: geosoft.gxapi.ST_SUM
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SUM
.. autodata:: geosoft.gxapi.ST_SUM2
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SUM2
.. autodata:: geosoft.gxapi.ST_SUM3
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SUM3
.. autodata:: geosoft.gxapi.ST_SUM4
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_SUM4
.. autodata:: geosoft.gxapi.ST_MINPOS
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_MINPOS
.. autodata:: geosoft.gxapi.ST_HIST_MAXCOUNT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.ST_HIST_MAXCOUNT

	